--- a/todo.html
+++ b/todo.html
@@ -118,7 +118,7 @@
         <!-- ------------------------------------------------------------------------------------------------------------------------------------------  -->
         
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11/lib/typed.min.js"></script>
-        <script src="E:\NK programs\HTML\To_Do\todojs.js"></script>
+        <script src="todojs.js"></script>
 
     </body>
 
