--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="household" id="household">
             <div class="container">
-                <h2 class="todo">Home</h2>
+                <h2 class="todo">Home List</h2>
                 <div class="buton">
                     <button class="home" onclick="hideHousehold()">Main</button>   
                 </div>
